<?xml version="1.0"?>
<package>
  <name>my_stdr_control</name>
  <version>1.0.0</version>
  <description>The my_stdr_control package</description>
  
  <maintainer email="peng.xu4@case.edu">Peng Xu</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs/Twist</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs/Twist</run_depend>

  <export>

  </export>
</package>
    
